Updated SSL configuration for Apache REST client.